Upgrade to Java 17 (#59)